k8s/longhorn/traefik-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-auth-longhorn
  namespace: longhorn-system
spec:
  basicAuth:
    secret: traefik-auth-secret-longhorn
