k8s/longhorn/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure
      kind: Gateway
  hostnames:
    - longhorn.h3rmt.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-auth-longhorn
